--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
   <div class="container">
     <h1>Minimal Cyber Suite</h1>
     <p>Casual minimalism meets cyber dynamics.</p>
-    <a href="#" class="explore-button">Explore Tools</a>
+    <a href="/projects" class="explore-button">Explore Tools</a>
     <p class="attribution">A Site Made By <a href="https://discord.com/users/1235968089221365831" target="_blank">Cassidy Camp</a></p>
   </div>
   
